fix: reduce gap between elements in single-case styles for improved layout

--- a/wp-app/wp-content/themes/attract/assets/style/partials/single-case.scss
+++ b/wp-app/wp-content/themes/attract/assets/style/partials/single-case.scss
@@ -101,7 +101,7 @@
     .right {
       position: relative;
       display: flex;
-      gap: 69px;
+      gap: 20px;
 
 
       .h6 {
